Updated Norwegian bokmål translation

--- a/po/nb.po
+++ b/po/nb.po
@@ -5,10 +5,10 @@
 # Torstein Adolf Winterseth <kvikende@fsfe.org>, 2010.
 msgid ""
 msgstr ""
-"Project-Id-Version: gnome-color-manager 3.5.x\n"
+"Project-Id-Version: gnome-color-manager 3.6.x\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-08-28 07:35+0200\n"
-"PO-Revision-Date: 2012-08-28 07:37+0200\n"
+"POT-Creation-Date: 2012-10-13 16:14+0200\n"
+"PO-Revision-Date: 2012-10-13 16:17+0200\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
 "Language: nb\n"
@@ -189,7 +189,7 @@ msgstr ""
 
 #: ../data/gcm-viewer.ui.h:32
 msgid "3D Gamut"
-msgstr ""
+msgstr "3D Gamut"
 
 #: ../data/gcm-viewer.ui.h:33
 msgid "Response out"
@@ -262,7 +262,7 @@ msgstr "Navngitte farger"
 #: ../data/gcm-viewer.ui.h:50
 msgid ""
 "Metadata is additional information stored in the profile for programs to use."
-msgstr ""
+msgstr "Metadata er tilleggsinformasjon som lagres i profilen for bruk av programmer."
 
 #: ../data/gcm-viewer.ui.h:51
 msgid "Metadata"
@@ -551,7 +551,7 @@ msgstr "Kople til måleinstrumentet på det grå kvadratet på midten av skjerme
 msgid ""
 "You will need to hold the device on the screen for the duration of the "
 "calibration."
-msgstr ""
+msgstr "Du må holde enheten på skjermen mens kalibreringen pågår."
 
 #: ../src/gcm-calibrate.c:547 ../src/gcm-calibrate.c:575
 #: ../src/gcm-calibrate.c:615
@@ -732,7 +732,7 @@ msgid ""
 "You can use the profile with <a href=\"import-linux\">Linux</a>, <a href="
 "\"import-osx\">Apple OS X</a> and <a href=\"import-windows\">Microsoft "
 "Windows</a> systems."
-msgstr ""
+msgstr "Du kan bruke profilen med <a href=\"import-linux\">Linux</a>, <a href=\"import-osx\">Apple OS X</a> og <a href=\"import-windows\">Microsoft Windows</a> systemer."
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:904 ../src/gcm-calibrate-main.c:1885
@@ -1548,12 +1548,12 @@ msgstr "CMY"
 #. TRANSLATORS: e.g. sRGB or adbode RGB
 #: ../src/gcm-viewer.c:768
 msgid "Standard space"
-msgstr ""
+msgstr "Standard mellomrom"
 
 #. TRANSLATORS: the raw EDID MD5 of the display device
 #: ../src/gcm-viewer.c:770
 msgid "Display checksum"
-msgstr "Sjekksum for skjermc"
+msgstr "Sjekksum for skjerm"
 
 #: ../src/gcm-viewer.c:771
 msgid "Display model"
