Updated Galician translations

--- a/po/gl.po
+++ b/po/gl.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gnome-color-manager master\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-09-26 10:02+0200\n"
-"PO-Revision-Date: 2012-09-26 11:00+0200\n"
+"POT-Creation-Date: 2012-10-31 11:05+0100\n"
+"PO-Revision-Date: 2012-10-31 11:05+0200\n"
 "Last-Translator: Fran Dieguez <frandieguez@gnome.org>\n"
 "Language-Team: gnome-l10n-gl@gnome.org\n"
 "Language: gl\n"
@@ -138,7 +138,7 @@ msgstr "CIE 1931"
 
 #: ../data/gcm-viewer.ui.h:31
 msgid "This 3D hull is what the profile looks like in Lab space"
-msgstr ""
+msgstr "Este casco en 3D amosa cómo aparenta o perfil no laboratorio espacial"
 
 #: ../data/gcm-viewer.ui.h:32
 msgid "3D Gamut"
@@ -171,8 +171,7 @@ msgstr "Saída da tarxeta de vídeo"
 #: ../data/gcm-viewer.ui.h:38
 msgid "A video card gamma table shows the curves loaded into the display"
 msgstr ""
-"Unha táboa de gamma da tarxeta de vídeo mostra as curvas cargadas na "
-"pantalla"
+"Unha táboa de gamma da tarxeta de vídeo mostra as curvas cargadas na pantalla"
 
 #: ../data/gcm-viewer.ui.h:39
 msgid "VCGT"
@@ -1068,15 +1067,15 @@ msgstr "Rápida"
 #, c-format
 msgid "(about %i sheet of paper)"
 msgid_plural "(about %i sheets of paper)"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "(Aprox. %i folla de papel)"
+msgstr[1] "(Aprox. %i follas de papel)"
 
 #: ../src/gcm-calibrate-main.c:1673
 #, c-format
 msgid "(about %i minute)"
 msgid_plural "(about %i minutes)"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "(Aprox. %i minuto)"
+msgstr[1] "(Aprox. %i minutos)"
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1713
@@ -1587,7 +1586,7 @@ msgstr "Lab (D50):"
 #. This refers to the amount of ambient light on the sensor
 #: ../data/gcm-picker.ui.h:10
 msgid "Media whitepoint:"
-msgstr ""
+msgstr "Punto blanco do ambiente:"
 
 #. This refers to the amount of ambient light on the sensor
 #: ../data/gcm-picker.ui.h:12
