Updated kn translation

--- a/po/kn.po
+++ b/po/kn.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: gnome-color-manager master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N\n"
-"POT-Creation-Date: 2012-11-19 14:46+0000\n"
-"PO-Revision-Date: 2012-11-21 14:50+0530\n"
+"POT-Creation-Date: 2012-11-21 09:21+0000\n"
+"PO-Revision-Date: 2012-11-21 15:15+0530\n"
 "Last-Translator: Shankar Prasad <svenkate@redhat.com>\n"
 "Language-Team: Kannada <kn@li.org>\n"
 "Language: kn\n"
@@ -166,45 +166,50 @@ msgstr "ಕಡತದ ಗಾತ್ರ"
 msgid "Filename"
 msgstr "ಕಡತದಹೆಸರು"
 
-#: ../data/gcm-viewer.ui.h:26
+#. warnings for the profile
+#: ../data/gcm-viewer.ui.h:27
+msgid "Warnings"
+msgstr "ಎಚ್ಚರಿಕೆಗಳು"
+
+#: ../data/gcm-viewer.ui.h:28
 msgid "Information"
 msgstr "ಮಾಹಿತಿ"
 
-#: ../data/gcm-viewer.ui.h:27
+#: ../data/gcm-viewer.ui.h:29
 msgid "y"
 msgstr "y"
 
-#: ../data/gcm-viewer.ui.h:28
+#: ../data/gcm-viewer.ui.h:30
 msgid "x"
 msgstr "x"
 
-#: ../data/gcm-viewer.ui.h:29
+#: ../data/gcm-viewer.ui.h:31
 msgid "A CIE 1931 diagram shows a 2D representation of the profile gamut"
 msgstr ""
 "ಒಂದು CIE 1931 ಚಿತ್ರವು ಪ್ರೊಫೈಲ್‌ ವ್ಯಾಪ್ತಿಯ 2D ಪ್ರತಿನಿಧಿಸುವಿಕೆಯನ್ನು ತೋರಿಸುತ್ತದೆ"
 
-#: ../data/gcm-viewer.ui.h:30
+#: ../data/gcm-viewer.ui.h:32
 msgid "CIE 1931"
 msgstr "CIE 1931"
 
-#: ../data/gcm-viewer.ui.h:31
+#: ../data/gcm-viewer.ui.h:33
 msgid "This 3D hull is what the profile looks like in Lab space"
 msgstr ""
 "ಪ್ರಯೋಗಶಾಲೆಯಲ್ಲಿ ಪ್ರೊಫೈಲ್ ಹೇಗೆ ಕಾಣಿಸುತ್ತದೆ ಎನ್ನುವುದನ್ನು ಈ 3D ಹಲ್‌ ತೋರಿಸುತ್ತದೆ"
 
-#: ../data/gcm-viewer.ui.h:32
+#: ../data/gcm-viewer.ui.h:34
 msgid "3D Gamut"
 msgstr "3D ಗ್ಯಾಮುಟ್"
 
-#: ../data/gcm-viewer.ui.h:33
+#: ../data/gcm-viewer.ui.h:35
 msgid "Response out"
 msgstr "ಪ್ರತಿಕ್ರಿಯೆ ಹೊರಗೆ"
 
-#: ../data/gcm-viewer.ui.h:34
+#: ../data/gcm-viewer.ui.h:36
 msgid "Response in"
 msgstr "ಪ್ರತಿಕ್ರಿಯೆ ಒಳಗೆ"
 
-#: ../data/gcm-viewer.ui.h:35
+#: ../data/gcm-viewer.ui.h:37
 msgid ""
 "A tone reproduction curve is the mapping of scene luminance to display "
 "luminance"
@@ -212,73 +217,76 @@ msgstr ""
 "ಪ್ರದರ್ಶಕದ ಪ್ರಕಾಶತೆಯನ್ನು ದೃಶ್ಯದ ಪ್ರಕಾಶತೆಯೊಂದಿಗೆ ಹೋಲಿಸುವ ವಕ್ರರೇಖೆಯು ಒಂದು ಟೋನ್ "
 "ಮರುಉತ್ಪಾದನಾ ವಕ್ರರೇಖೆಯಾಗಿರುತ್ತದೆ"
 
-#: ../data/gcm-viewer.ui.h:36
+#: ../data/gcm-viewer.ui.h:38
 msgid "TRC"
 msgstr "TRC"
 
-#: ../data/gcm-viewer.ui.h:37
+#: ../data/gcm-viewer.ui.h:39
 msgid "Video card out"
 msgstr "ವೀಡಿಯೊ ಕಾರ್ಡ್ ಔಟ್"
 
-#: ../data/gcm-viewer.ui.h:38
+#: ../data/gcm-viewer.ui.h:40
 msgid "A video card gamma table shows the curves loaded into the display"
 msgstr ""
 "ಒಂದು ವೀಡಿಯೊ ಕಾರ್ಡ್ ಗಾಮಾ ಕೋಷ್ಟಕವು ಪ್ರದರ್ಶಕಕ್ಕೆ ಲೋಡ್ ಮಾಡಲಾದ ವಕ್ರರೇಖೆಗಳನ್ನು "
 "ತೋರಿಸುತ್ತದೆ"
 
-#: ../data/gcm-viewer.ui.h:39
+#: ../data/gcm-viewer.ui.h:41
 msgid "VCGT"
 msgstr "VCGT"
 
-#: ../data/gcm-viewer.ui.h:40
+#: ../data/gcm-viewer.ui.h:42
 msgid "Previous Image"
 msgstr "ಹಿಂದಿನ ಚಿತ್ರ"
 
 #. This is an example image that is saved in sRGB gamut
-#: ../data/gcm-viewer.ui.h:42
+#: ../data/gcm-viewer.ui.h:44
 msgid "sRGB example"
 msgstr "sRGB ಉದಾಹರಣೆ"
 
-#: ../data/gcm-viewer.ui.h:43
+#: ../data/gcm-viewer.ui.h:45
 msgid "Next Image"
 msgstr "ಮುಂದಿನ ಚಿತ್ರ"
 
-#: ../data/gcm-viewer.ui.h:44
+#: ../data/gcm-viewer.ui.h:46
 msgid "This shows what an image would look like if saved with the profile"
 msgstr ""
 "ಒಂದು ಚಿತ್ರವನ್ನು ಪ್ರೊಫೈಲಿನೊಂದಿಗೆ ಉಳಿಸಿದಲ್ಲಿ ಅದು ಹೇಗೆ ಕಾಣಿಸಿಕೊಳ್ಳುತ್ತದೆ "
-"ಎನ್ನುವುದನ್ನು ಇದು ತೋರಿಸುತ್ತದೆ"
+"ಎನ್ನುವುದನ್ನು "
+"ಇದು ತೋರಿಸುತ್ತದೆ"
 
-#: ../data/gcm-viewer.ui.h:45
+#: ../data/gcm-viewer.ui.h:47
 msgid "From sRGB"
 msgstr "sRGB ಇಂದ"
 
-#: ../data/gcm-viewer.ui.h:46
+#: ../data/gcm-viewer.ui.h:48
 msgid "This shows what an image would look like if opened with the profile"
 msgstr ""
 "ಒಂದು ಚಿತ್ರವನ್ನು ಪ್ರೊಫೈಲಿನೊಂದಿಗೆ ತೆರೆದಲ್ಲಿ ಅದು ಹೇಗೆ ಕಾಣಿಸಿಕೊಳ್ಳುತ್ತದೆ "
-"ಎನ್ನುವುದನ್ನು ಇದು ತೋರಿಸುತ್ತದೆ"
+"ಎನ್ನುವುದನ್ನು "
+"ಇದು ತೋರಿಸುತ್ತದೆ"
 
-#: ../data/gcm-viewer.ui.h:47
+#: ../data/gcm-viewer.ui.h:49
 msgid "To sRGB"
 msgstr "sRGB ಗೆ"
 
-#: ../data/gcm-viewer.ui.h:48
+#: ../data/gcm-viewer.ui.h:50
 msgid "Named colors are specific colors that are defined in the profile"
 msgstr "ಹೆಸರಿಸಲಾದ ಬಣ್ಣಗಳೆಂದರೆ ಪ್ರೊಫೈಲಿನಲ್ಲಿ ಸೂಚಿಸಲಾದ ನಿಶ್ಚಿತ ಬಣ್ಣಗಳಾಗಿರುತ್ತವೆ"
 
-#: ../data/gcm-viewer.ui.h:49
+#: ../data/gcm-viewer.ui.h:51
 msgid "Named Colors"
 msgstr "ಹೆಸರಿಸಲಾದ ಬಣ್ಣಗಳು"
 
-#: ../data/gcm-viewer.ui.h:50
+#: ../data/gcm-viewer.ui.h:52
 msgid ""
 "Metadata is additional information stored in the profile for programs to use."
 msgstr ""
 "ಮೆಟಾಡೇಟಾ ಎನ್ನುವುದು ಪ್ರೊಗ್ರಾಮ್‌ಗಳು ಬಳಸಬೇಕಿರುವ ಪ್ರೊಫೈಲಿನಲ್ಲಿ ಶೇಖರಿಸಿಡಲಾದ "
-"ಹೆಚ್ಚುವರಿ ಮಾಹಿತಿ."
+"ಹೆಚ್ಚುವರಿ "
+"ಮಾಹಿತಿ."
 
-#: ../data/gcm-viewer.ui.h:51
+#: ../data/gcm-viewer.ui.h:53
 msgid "Metadata"
 msgstr "ಮೆಟಾಡಾಟಾ"
 
@@ -312,7 +320,8 @@ msgid ""
 "the hardware device."
 msgstr ""
 "ಉತ್ಪಾದಿಸಲಾದ ಪಟ್ಟಿಗಳನ್ನು ತೆರೆಯಲ್ಲಿ ಚಿತ್ರಿಸಲಾಗುತ್ತಿದೆ, ಮತ್ತು ಅದನ್ನು ನಂತರ "
-"ಯಂತ್ರಾಂಶ ಸಾಧನದಿಂದ ಅಳೆಯಲಾಗುತ್ತದೆ."
+"ಯಂತ್ರಾಂಶ "
+"ಸಾಧನದಿಂದ ಅಳೆಯಲಾಗುತ್ತದೆ."
 
 #: ../src/gcm-calibrate-argyll.c:642 ../src/gcm-calibrate-argyll.c:1003
 msgid "Generating the profile"
@@ -362,7 +371,8 @@ msgid ""
 msgstr ""
 "ದಯವಿಟ್ಟು ಇಂಕ್‌ ಒಣಗುವವರೆಗೂ ಸ್ವಲ್ಪ ಹೊತ್ತು ಕಾಯಿರಿ. ಒದ್ದೆಯಾದ ಇಂಕಿನೊಂದಿಗೆ ಪ್ರೊಫೈಲ್ "
 "ಮಾಡಿದಲ್ಲಿ ಒಂದು ಕಳಪೆಮಟ್ಟದ ಪ್ರೊಫೈಲ್ ಉಂಟಾಗುತ್ತದೆ ಮತ್ತು ನಿಮ್ಮ ಬಣ್ಣ ಅಳೆಯುವ "
-"ಉಪಕರಣಕ್ಕೆ ತೊಂದರೆ ಉಂಟಾಗಬಹುದು."
+"ಉಪಕರಣಕ್ಕೆ "
+"ತೊಂದರೆ ಉಂಟಾಗಬಹುದು."
 
 #: ../src/gcm-calibrate-argyll.c:1934
 msgid "Set up instrument"
@@ -420,7 +430,8 @@ msgid ""
 "USB plug and re-insert before trying to use this device."
 msgstr ""
 "ಅಳೆಯುವ ಉಪಕರಣವು ಕಾರ್ಯನಿರತವಾಗಿದೆ (ಬ್ಯುಸಿ) ಮತ್ತು ಆರಂಭಗೊಳ್ಳುತ್ತಿಲ್ಲ. ಈ ಸಾಧನವನ್ನು "
-"ಬಳಸುವ ಮೊದಲು USB ಪ್ಲಗ್ ಅನ್ನು ತೆಗೆದು ನಂತರ ಮರಳಿ ಜೋಡಿಸಿ."
+"ಬಳಸುವ "
+"ಮೊದಲು USB ಪ್ಲಗ್ ಅನ್ನು ತೆಗೆದು ನಂತರ ಮರಳಿ ಜೋಡಿಸಿ."
 
 #: ../src/gcm-calibrate-argyll.c:2277
 msgid "Reading target"
@@ -479,7 +490,8 @@ msgid ""
 "hold the measure switch."
 msgstr ""
 "ಅಕ್ಷರದ ಮುಂದಿರುವ ಬಿಳಿಯ ಬಣ್ಣದ ಜಾಗದಲ್ಲಿ ಕಲೊರಿಮೀಟರ್ ಅನ್ನು ಇರಿಸಿ ನಂತರ ಕ್ಲಿಕ್ ಮಾಡಿ "
-"ಮತ್ತು ಅಳೆಯುವ ಗುಂಡಿಯನ್ನು ಒತ್ತಿ ಹಿಡಿಯಿರಿ."
+"ಮತ್ತು "
+"ಅಳೆಯುವ ಗುಂಡಿಯನ್ನು ಒತ್ತಿ ಹಿಡಿಯಿರಿ."
 
 #. TRANSLATORS: dialog message, just follow the hardware instructions
 #: ../src/gcm-calibrate-argyll.c:2395
@@ -497,7 +509,8 @@ msgid ""
 "trying to measure."
 msgstr ""
 "ಸಾಧನದ ಕೇಂದ್ರವನ್ನು ನೀವು ಅಳತೆ ಮಾಡಲು ಪ್ರಯತ್ನಿಸುವ ಅಡ್ಡ ಸಾಲಿಗೆ ಸರಿಯಾಗಿ "
-"ಹೊಂದಿಸಲಾಗಿದೆ ಎಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ."
+"ಹೊಂದಿಸಲಾಗಿದೆ "
+"ಎಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ."
 
 #. TRANSLATORS: dialog message, just follow the hardware instructions
 #: ../src/gcm-calibrate-argyll.c:2403
@@ -506,7 +519,8 @@ msgid ""
 "try again."
 msgstr ""
 "ನೀವು ಒಂದು ತಪ್ಪನ್ನು ಮಾಡಿದಲ್ಲಿ, ಗುಂಡಿಯನ್ನು ಮುಕ್ತಗೊಳಿಸಿ, ಮತ್ತು ಇನ್ನೊಮ್ಮೆ "
-"ಪ್ರಯತ್ನಿಸಲು ನಿಮಗೆ ಅವಕಾಶ ದೊರೆಯುತ್ತದೆ."
+"ಪ್ರಯತ್ನಿಸಲು "
+"ನಿಮಗೆ ಅವಕಾಶ ದೊರೆಯುತ್ತದೆ."
 
 #: ../src/gcm-calibrate-argyll.c:2517
 msgid "Printing"
@@ -546,7 +560,8 @@ msgid ""
 "profiling projectors."
 msgstr ""
 "ಈ ಬಣ್ಣ ಅಳೆಯುವ ಉಪಕರಣವನ್ನು ಕ್ಯಾಲಿಬ್ರೇಶನ್ ಮತ್ತು ಪ್ರೊಫೈಲಿಂಗ್ ಪ್ರೊಜೆಕ್ಟರುಗಳನ್ನು "
-"ಬೆಂಬಲಿಸಲು ವಿನ್ಯಾಸಗೊಳಿಸಲಾಗಿಲ್ಲ."
+"ಬೆಂಬಲಿಸಲು "
+"ವಿನ್ಯಾಸಗೊಳಿಸಲಾಗಿಲ್ಲ."
 
 #: ../src/gcm-calibrate.c:522
 msgid "Please attach instrument"
@@ -559,7 +574,8 @@ msgid ""
 "gray square like the image below."
 msgstr ""
 "ಈ ಕೆಳಗಿನ ಚಿತ್ರದಲ್ಲಿ ತೋರಿಸಿರುವಂತೆ ಅಳೆಯುವ ಉಪಕರಣವನ್ನು ತೆರೆಯ ಮಧ್ಯದಲ್ಲಿನ ಬೂದು "
-"ಚೌಕಕ್ಕೆ ಲಗತ್ತಿಸಿ."
+"ಚೌಕಕ್ಕೆ "
+"ಲಗತ್ತಿಸಿ."
 
 #. TRANSLATORS: dialog message, ask user to attach device
 #: ../src/gcm-calibrate.c:533
@@ -694,7 +710,8 @@ msgid ""
 "brightness set to maximum."
 msgstr ""
 "ಯಾವುದಾದರೂ ತೆರೆ ಸರಿಪಡಿಕೆಗಳು ಇದ್ದಲ್ಲಿ ಅವುಗಳನ್ನು ತಾತ್ಕಾಲಿಕವಾಗಿ ಆಫ್ ಮಾಡಲಾಗುತ್ತದೆ "
-"ಮತ್ತು ಪ್ರಕಾಶತೆಯನ್ನು ಗರಿಷ್ಟವಾಗಿಸಲಾಗುತ್ತದೆ."
+"ಮತ್ತು "
+"ಪ್ರಕಾಶತೆಯನ್ನು ಗರಿಷ್ಟವಾಗಿಸಲಾಗುತ್ತದೆ."
 
 #. TRANSLATORS: this is the final intro page text
 #: ../src/gcm-calibrate-main.c:739
@@ -747,8 +764,9 @@ msgid ""
 "To view details about the new profile or to undo the calibration visit the "
 "<a href=\"control-center://color\">control center</a>."
 msgstr ""
-"ಹೊಸ ಪ್ರೊಫೈಲ್ ಕುರಿತು ವಿವರಗಳನ್ನು ನೋಡಲು ಅಥವ ಕ್ಯಾಲಿಬ್ರೇಶನ್ ಅನ್ನು ರದ್ದುಗೊಳಿಸಲು "
-"<a href=\"control-center://color\">ನಿಯಂತ್ರಣ ಕೇಂದ್ರ</a>ಕ್ಕೆ ಭೇಟಿ ಕೊಡಿ."
+"ಹೊಸ ಪ್ರೊಫೈಲ್ ಕುರಿತು ವಿವರಗಳನ್ನು ನೋಡಲು ಅಥವ ಕ್ಯಾಲಿಬ್ರೇಶನ್ ಅನ್ನು ರದ್ದುಗೊಳಿಸಲು <a "
+"href="
+"\"control-center://color\">ನಿಯಂತ್ರಣ ಕೇಂದ್ರ</a>ಕ್ಕೆ ಭೇಟಿ ಕೊಡಿ."
 
 #: ../src/gcm-calibrate-main.c:892
 msgid ""
@@ -756,9 +774,9 @@ msgid ""
 "\"import-osx\">Apple OS X</a> and <a href=\"import-windows\">Microsoft "
 "Windows</a> systems."
 msgstr ""
-"ನೀವು ಪ್ರೊಫೈಲ್ ಅನ್ನು <a href=\"import-linux\">Linux</a>, <a href="
-"\"import-osx\">Apple OS X</a> and <a href=\"import-windows\">Microsoft "
-"Windows</a> ವ್ಯವಸ್ಥೆಗಳೊಂದಿಗೆ ಬಳಸಬಹುದಾಗಿರುತ್ತದೆ."
+"ನೀವು ಪ್ರೊಫೈಲ್ ಅನ್ನು <a href=\"import-linux\">Linux</a>, <a href=\"import-osx"
+"\">Apple OS X</a> and <a href=\"import-windows\">Microsoft Windows</a> "
+"ವ್ಯವಸ್ಥೆಗಳೊಂದಿಗೆ ಬಳಸಬಹುದಾಗಿರುತ್ತದೆ."
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:904 ../src/gcm-calibrate-main.c:1885
@@ -791,7 +809,8 @@ msgid ""
 "with the following settings to get optimal results."
 msgstr ""
 "ಪ್ರದರ್ಶಕವನ್ನು ಕ್ಯಾಲಿಬ್ರೇಟ್ ಮಾಡುವ ಮೊದಲು, ಸೂಕ್ತವಾದ ಫಲಿತಾಂಶಗಳನ್ನು ಪಡೆಯಲು ಈ "
-"ಕೆಳಗಿನ ಸಿದ್ಧತೆಗಳೊಂದಿಗೆ ನಿಮ್ಮ ಪ್ರದರ್ಶಕವನ್ನು ಸಂರಚಿಸಿ ಎಂದು ಸಲಹೆ ಮಾಡಲಾಗುತ್ತದೆ."
+"ಕೆಳಗಿನ "
+"ಸಿದ್ಧತೆಗಳೊಂದಿಗೆ ನಿಮ್ಮ ಪ್ರದರ್ಶಕವನ್ನು ಸಂರಚಿಸಿ ಎಂದು ಸಲಹೆ ಮಾಡಲಾಗುತ್ತದೆ."
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate-main.c:992
@@ -821,7 +840,8 @@ msgid ""
 "channels are set to the same values."
 msgstr ""
 "ಅಗತ್ಯಾನುಗುಣ ಬಣ್ಣದ ಸಿದ್ಧತೆಗಳೊಂದಿಗೆ ನಿಮ್ಮ ಪ್ರದರ್ಶಕವನ್ನು ಸಂರಚಿಸಿ ಮತ್ತು RGB "
-"ಚಾನಲ್‌ಗಳನ್ನು ಅದೇ ಮೌಲ್ಯಗಳಿಗೆ ಹೊಂದಿಸಲಾಗಿದೆ ಎಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ."
+"ಚಾನಲ್‌ಗಳನ್ನು "
+"ಅದೇ ಮೌಲ್ಯಗಳಿಗೆ ಹೊಂದಿಸಲಾಗಿದೆ ಎಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ."
 
 #. TRANSLATORS: dialog message, addition to bullet item
 #: ../src/gcm-calibrate-main.c:1004
@@ -975,7 +995,8 @@ msgid ""
 "profiles have not been applied."
 msgstr ""
 "ವೈದೃಶ್ಯ ಮತ್ತು ಪ್ರಕಾಶತನೆಯನ್ನು ಬದಲಾಯಿಸಲಾಗಿಲ್ಲ ಮತ್ತು ಬಣ್ಣ ಸರಿಪಡಿಕೆ "
-"ಪ್ರೊಫೈಲುಗಳನ್ನು ಅನ್ವಯಿಸಲಾಗಿದೆ ಎಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ."
+"ಪ್ರೊಫೈಲುಗಳನ್ನು "
+"ಅನ್ವಯಿಸಲಾಗಿದೆ ಎಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ."
 
 #. TRANSLATORS: dialog message, suffix
 #: ../src/gcm-calibrate-main.c:1315
@@ -984,7 +1005,8 @@ msgid ""
 "file resolution should be at least 200dpi."
 msgstr ""
 "ಸ್ಕ್ಯಾನಿಂಗ್ ಮಾಡುವ ಮೊದಲು ಸಾಧನದ ಸೆನ್ಸರ್ ಅನ್ನು ಸ್ವಚ್ಛಗೊಳಿಸಬೇಕು ಮತ್ತು ಔಟ್‌ಪುಟ್ "
-"ರೆಸಲ್ಯೂಶನ್ ಕನಿಷ್ಟ 200dpi ಯಾಗಿರಬೇಕು."
+"ರೆಸಲ್ಯೂಶನ್ "
+"ಕನಿಷ್ಟ 200dpi ಯಾಗಿರಬೇಕು."
 
 #. TRANSLATORS: dialog message, preface
 #: ../src/gcm-calibrate-main.c:1321
@@ -1091,8 +1113,10 @@ msgid ""
 "patches, or profile using existing test patches."
 msgstr ""
 "ನೀವು ಒಂದು ಸ್ಥಳೀಯ ಮುದ್ರಕವನ್ನು ಪ್ರೊಫೈಲ್ ಮಾಡಲು, ಕೆಲವು ಪ್ರಾಯೋಗಿಕ ಪಟ್ಟಿಗಳನ್ನು "
-"ಉತ್ಪಾದಿಸಲು, ಅಥವ ಈಗಾಗಲೆ ಇರುವ ಪ್ರಾಯೋಗಿಕ ಪಟ್ಟಿಗಳನ್ನು ಬಳಸಿಕೊಂಡು ಪ್ರೊಫೈಲ್ ಮಾಡಲು "
-"ಬಯಸಿದಲ್ಲಿ ದಯವಿಟ್ಟು ಸೂಚಿಸಿ."
+"ಉತ್ಪಾದಿಸಲು, "
+"ಅಥವ ಈಗಾಗಲೆ ಇರುವ ಪ್ರಾಯೋಗಿಕ ಪಟ್ಟಿಗಳನ್ನು ಬಳಸಿಕೊಂಡು ಪ್ರೊಫೈಲ್ ಮಾಡಲು ಬಯಸಿದಲ್ಲಿ "
+"ದಯವಿಟ್ಟು "
+"ಸೂಚಿಸಿ."
 
 #. TRANSLATORS: this is the calibration wizard page title
 #: ../src/gcm-calibrate-main.c:1625
@@ -1118,8 +1142,8 @@ msgid ""
 "requires more time for reading the color patches."
 msgstr ""
 "ಹೆಚ್ಚು ನಿಖರವಾದ ಪ್ರೊಫೈಲ್‌ನಿಂದಾಗಿ ಬಣ್ಣದ ಹೊಂದಾಣಿಕೆಯಲ್ಲಿ ಉತ್ತಮ ನಿಖರತೆಯನ್ನು "
-"ಸಾಧಿಸಲು ಸಾಧ್ಯವಿರುತ್ತದೆ ಆದರೆ ಬಣ್ಣದ ಪಟ್ಟಿಗಳನ್ನು ಓದಲು ಹೆಚ್ಚಿನ ಸಮಯವನ್ನು "
-"ತೆಗೆದುಕೊಳ್ಳುತ್ತದೆ."
+"ಸಾಧಿಸಲು "
+"ಸಾಧ್ಯವಿರುತ್ತದೆ ಆದರೆ ಬಣ್ಣದ ಪಟ್ಟಿಗಳನ್ನು ಓದಲು ಹೆಚ್ಚಿನ ಸಮಯವನ್ನು ತೆಗೆದುಕೊಳ್ಳುತ್ತದೆ."
 
 #. TRANSLATORS: this is the message body for the chart selection
 #: ../src/gcm-calibrate-main.c:1681
@@ -1229,7 +1253,7 @@ msgstr "ಹಕ್ಕು (c)"
 
 #. TRANSLATORS: we can make this modal (stay on top of) another window
 #: ../src/gcm-calibrate-main.c:2276 ../src/gcm-picker.c:795
-#: ../src/gcm-viewer.c:1732
+#: ../src/gcm-viewer.c:1831
 msgid "Set the parent window to make this modal"
 msgstr "ಇದನ್ನು ಮೋಡಲ್ ಮಾಡುವಂತೆ ಮೂಲ ಕಿಟಕಿಯನ್ನು ಹೊಂದಿಸು"
 
@@ -1284,72 +1308,68 @@ msgid "Show debugging options"
 msgstr "ದೋಷ ನಿವಾರಣಾ ಆಯ್ಕೆಗಳನ್ನು ತೋರಿಸು"
 
 #. TRANSLATORS: command line option: a list of catalogs to install
-#: ../src/gcm-import.c:96
+#: ../src/gcm-import.c:101
 msgid "ICC profile to install"
 msgstr "ಅನುಸ್ಥಾಪಿಸಬೇಕಿರುವ ICC ಪ್ರೊಫೈಲ್"
 
-#: ../src/gcm-import.c:122
+#: ../src/gcm-import.c:127
 msgid "No filename specified"
 msgstr "ಯಾವುದೆ ಕಡತದ ಹೆಸರನ್ನು ಸೂಚಿಸಲಾಗಿಲ್ಲ"
 
-#: ../src/gcm-import.c:140 ../src/gcm-viewer.c:1373
+#: ../src/gcm-import.c:145 ../src/gcm-viewer.c:1468
 msgid "Failed to open ICC profile"
 msgstr "ICC ಪ್ರೊಫೈಲನ್ನು ತೆರೆಯುವಲ್ಲಿ ವಿಫಲಗೊಂಡಿದೆ"
 
-#: ../src/gcm-import.c:145
+#: ../src/gcm-import.c:150
 #, c-format
 msgid "Failed to parse file: %s"
 msgstr "ಕಡತವನ್ನು ಪಾರ್ಸ್ ಮಾಡುವಲ್ಲಿ ವಿಫಲಗೊಂಡಿದೆ: %s"
 
 #. TRANSLATORS: message text
-#: ../src/gcm-import.c:166
+#: ../src/gcm-import.c:171
 #, c-format
 msgid "Profile description: %s"
 msgstr "ಪ್ರೊಫೈಲ್ ವಿವರಣೆ: %s"
 
 #. TRANSLATORS: message text
-#: ../src/gcm-import.c:176
+#: ../src/gcm-import.c:181
 msgid "Profile copyright:"
 msgstr "ಪ್ರೊಫೈಲ್ ಹಕ್ಕು:"
 
-#: ../src/gcm-import.c:188
+#: ../src/gcm-import.c:194 ../src/gcm-import.c:244
 msgid "Color profile is already imported"
 msgstr "ಬಣ್ಣದ ಪ್ರೊಫೈಲ್ ಅನ್ನು ಆಮದು ಮಾಡಲಾಗಿದೆ"
 
-#: ../src/gcm-import.c:218
-msgid "ICC profile already installed system-wide"
-msgstr "ICC ಪ್ರೊಫೈಲ್ ಅನ್ನು ಈಗಾಗಲೆ ವ್ಯವಸ್ಥೆಯಾದ್ಯಂತ ಅನುಸ್ಥಾಪಿಸಲಾಗಿದೆ"
+#: ../src/gcm-import.c:248 ../src/gcm-import.c:292
+msgid "Show Details"
+msgstr "ವಿವರಗಳನ್ನು ತೋರಿಸು"
 
 #. TRANSLATORS: the profile type
-#: ../src/gcm-import.c:234
+#: ../src/gcm-import.c:264
 msgid "Import display color profile?"
 msgstr "ಪ್ರದರ್ಶಕದ ಪ್ರೊಫೈಲ್‌ ಅನ್ನು ಆಮದು ಮಾಡಬೇಕೆ?"
 
 #. TRANSLATORS: the profile type
-#: ../src/gcm-import.c:238
+#: ../src/gcm-import.c:268
 msgid "Import device color profile?"
 msgstr "ಸಾಧನದ ಬಣ್ಣದ ಪ್ರೊಫೈಲ್‌ ಅನ್ನು ಆಮದು ಮಾಡಬೇಕೆ?"
 
 #. TRANSLATORS: the profile type
-#: ../src/gcm-import.c:242
+#: ../src/gcm-import.c:272
 msgid "Import named color profile?"
 msgstr "ಹೆಸರಿಸಲಾದ ಬಣ್ಣದ ಪ್ರೊಫೈಲ್‌ ಅನ್ನು ಆಮದು ಮಾಡಬೇಕೆ?"
 
 #. TRANSLATORS: the profile type
-#: ../src/gcm-import.c:246
+#: ../src/gcm-import.c:276
 msgid "Import color profile?"
 msgstr "ಬಣ್ಣದ ಪ್ರೊಫೈಲ್‌ ಅನ್ನು ಆಮದು ಮಾಡಬೇಕೆ?"
 
 #. TRANSLATORS: button text
-#: ../src/gcm-import.c:261 ../src/gcm-viewer.c:431
+#: ../src/gcm-import.c:291 ../src/gcm-viewer.c:431
 msgid "Import"
 msgstr "ಆಮದು"
 
-#: ../src/gcm-import.c:262
-msgid "Show Details"
-msgstr "ವಿವರಗಳನ್ನು ತೋರಿಸು"
-
-#: ../src/gcm-import.c:286 ../src/gcm-viewer.c:1406
+#: ../src/gcm-import.c:316 ../src/gcm-viewer.c:1501
 msgid "Failed to import file"
 msgstr "ಕಡತವನ್ನು ಆಮದು ಮಾಡುವಲ್ಲಿ ವಿಫಲವಾಗಿದೆ"
 
@@ -1686,34 +1706,103 @@ msgstr "ತೆರೆಯ ಮೇಲ್ಮೈ ರಚನೆ"
 msgid "Connection type"
 msgstr "ಸಂಪರ್ಕದ ಬಗೆ"
 
+#. TRANSLATORS: e.g. Screen brightness in percent
+#: ../src/gcm-viewer.c:806
+msgid "Screen brightness"
+msgstr "ತೆರೆಯ ಪ್ರಕಾಶತೆ"
+
+#. TRANSLATORS: the profile is broken
+#: ../src/gcm-viewer.c:917
+#| msgid "Profile description: %s"
+msgid "No description has been set"
+msgstr "ಯಾವುದೆ ವಿವರಣೆಯನ್ನು ಹೊಂದಿಸಲಾಗಿಲ್ಲ"
+
+#. TRANSLATORS: the profile is broken
+#: ../src/gcm-viewer.c:921
+msgid "No copyright has been set"
+msgstr "ಯಾವುದೆ ಹಕ್ಕನ್ನು ಹೊಂದಿಸಲಾಗಿಲ್ಲ"
+
+#. TRANSLATORS: the profile is broken
+#: ../src/gcm-viewer.c:925
+msgid "The display compensation table is invalid"
+msgstr "ಪ್ರದರ್ಶಕದ ಸರಿದೂಗಿಸುವ ಕೋಷ್ಟಕ ಅಮಾನ್ಯವಾಗಿದೆ"
+
+#. TRANSLATORS: the profile is broken
+#: ../src/gcm-viewer.c:929
+msgid "A scum dot is present for media white"
+msgstr "ಮಾಧ್ಯಮದ ಬಿಳಿಗಾಗಿ ಒಂದು ನೊರೆ ಚುಕ್ಕಿಯು ಇದೆ"
+
+#. TRANSLATORS: the profile is broken
+#: ../src/gcm-viewer.c:933
+msgid "The gray axis contains significant amounts of color"
+msgstr "ಬೂದು ಅಕ್ಷವು ಗಮನಾರ್ಹ ಮೊತ್ತದ ಬಣ್ಣವನ್ನು ಹೊಂದಿದೆ"
+
+#. TRANSLATORS: the profile is broken
+#: ../src/gcm-viewer.c:937
+msgid "The gray axis is non-monotonic"
+msgstr "ಬೂದು ಅಕ್ಷವು ಏಕತಾನತೆಯಾಗಿಲ್ಲ"
+
+#. TRANSLATORS: the profile is broken
+#: ../src/gcm-viewer.c:941
+msgid "One or more of the primaries are invalid"
+msgstr "ಒಂದು ಅಥವ ಹೆಚ್ಚಿನ ಪ್ರಾಥಮಿಕಗಳು ಅಮಾನ್ಯವಾಗಿವೆ"
+
+#. TRANSLATORS: the profile is broken
+#: ../src/gcm-viewer.c:945
+msgid "The primaries do not add to white"
+msgstr "ಪ್ರಾಥಮಿಕವು ಬಿಳಿಗೆ ಸೇರ್ಪಡೆಗೊಳ್ಳುವುದಿಲ್ಲ"
+
+#. TRANSLATORS: the profile is broken
+#: ../src/gcm-viewer.c:949
+msgid "One or more of the primaries is unlikely"
+msgstr "ಒಂದು ಅಥವ ಹೆಚ್ಚಿನ ಪ್ರಾಥಮಿಕಗಳು ಅಸಂಭವವಾಗಿದೆ"
+
+#. TRANSLATORS: the profile is broken
+#: ../src/gcm-viewer.c:953
+msgid "The white is not D50 white"
+msgstr "ಬಿಳಿಯು D50 ಬಿಳಿಯಾಗಿಲ್ಲ"
+
+#. TRANSLATORS: the profile is broken
+#: ../src/gcm-viewer.c:957
+#| msgid "Unknown manufacturer"
+msgid "Unknown warning type"
+msgstr "ಗೊತ್ತಿರದ ಎಚ್ಚರಿಕೆಯ ಬಗೆ"
+
 #. TRANSLATORS: if the device has a VCGT profile
-#: ../src/gcm-viewer.c:1058
+#: ../src/gcm-viewer.c:1124
 msgid "Yes"
 msgstr "ಹೌದು"
 
 #. TRANSLATORS: if the device has a VCGT profile
-#: ../src/gcm-viewer.c:1061
+#: ../src/gcm-viewer.c:1127
 msgid "No"
 msgstr "ಇಲ್ಲ"
 
+#. TRANSLATORS: profiles that have warnings are useable,
+#. * but may not be any good
+#: ../src/gcm-viewer.c:1156
+msgid "The profile has the following problems:"
+msgstr "ಪ್ರೊಫೈಲ್ ಈ ಕೆಳಗಿನ ತೊಂದರೆಗಳನ್ನು ಹೊಂದಿದೆ:"
+
 #. TRANSLATORS: this is the tooltip when the profile can be deleted
-#: ../src/gcm-viewer.c:1178
+#: ../src/gcm-viewer.c:1273
 msgid "Delete this profile"
 msgstr "ಈ ಪ್ರೊಫೈಲನ್ನು ಅಳಿಸು"
 
 #. TRANSLATORS: this is the tooltip when the profile cannot be deleted
-#: ../src/gcm-viewer.c:1181
+#: ../src/gcm-viewer.c:1276
 msgid "This profile cannot be deleted"
 msgstr "ಈ ಪ್ರೊಫೈಲನ್ನು ಅಳಿಸಲು ಸಾಧ್ಯವಿಲ್ಲ"
 
 #. TRANSLATORS: show just the one profile, rather than all
-#: ../src/gcm-viewer.c:1735
+#: ../src/gcm-viewer.c:1834
 msgid "Set the specific profile to show"
 msgstr "ತೋರಿಸಲು ನಿಶ್ಚಿತ ಕಡತವನ್ನು ಹೊಂದಿಸು"
 
 #. TRANSLATORS: show just the one filename, rather than all
-#: ../src/gcm-viewer.c:1738
+#: ../src/gcm-viewer.c:1837
 msgid "Set the specific file to show"
 msgstr "ತೋರಿಸಲು ನಿಶ್ಚಿತ ಪ್ರೊಫೈಲನ್ನು ಹೊಂದಿಸು"
 
-
+#~ msgid "ICC profile already installed system-wide"
+#~ msgstr "ICC ಪ್ರೊಫೈಲ್ ಅನ್ನು ಈಗಾಗಲೆ ವ್ಯವಸ್ಥೆಯಾದ್ಯಂತ ಅನುಸ್ಥಾಪಿಸಲಾಗಿದೆ"
