[l10n] Updated Estonian translation

--- a/po/et.po
+++ b/po/et.po
@@ -13,8 +13,8 @@ msgstr ""
 "Project-Id-Version: Gnome-color-manager\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N\n"
-"POT-Creation-Date: 2012-10-14 14:11+0000\n"
-"PO-Revision-Date: 2012-10-29 23:27+0300\n"
+"POT-Creation-Date: 2012-11-30 07:39+0000\n"
+"PO-Revision-Date: 2012-12-07 21:00+0300\n"
 "Last-Translator: Mattias Põldaru <mahfiaz@gmail.com>\n"
 "Language-Team: Gnome Estonian Translation Team <gnome-et@linux.ee>\n"
 "Language: \n"
@@ -140,6 +140,10 @@ msgstr "Faili suurus"
 #. The basename (the last section of the filename) of the profile
 msgid "Filename"
 msgstr "Faili nimi"
+
+#. warnings for the profile
+msgid "Warnings"
+msgstr "Hoiatused"
 
 msgid "Information"
 msgstr "Andmed"
@@ -1329,6 +1333,54 @@ msgstr "Ekraanipinna kate"
 msgid "Connection type"
 msgstr "Ühenduse liik"
 
+#. TRANSLATORS: e.g. Screen brightness in percent
+msgid "Screen brightness"
+msgstr "Ekraani heledus"
+
+#. TRANSLATORS: the profile is broken
+msgid "No description has been set"
+msgstr "Kirjeldust pole määratud"
+
+#. TRANSLATORS: the profile is broken
+msgid "No copyright has been set"
+msgstr "Autoriõigused pole määratud"
+
+#. TRANSLATORS: the profile is broken
+msgid "The display compensation table is invalid"
+msgstr "Kuva kompenseerimise tabel on vigane"
+
+#. TRANSLATORS: the profile is broken
+msgid "A scum dot is present for media white"
+msgstr "Meediumi valgel on räpapunkt (scum dot)"
+
+#. TRANSLATORS: the profile is broken
+msgid "The gray axis contains significant amounts of color"
+msgstr "Halltelg sisaldab olulisel määral värvi"
+
+#. TRANSLATORS: the profile is broken
+msgid "The gray axis is non-monotonic"
+msgstr "Halltelg pole ühetooniline"
+
+#. TRANSLATORS: the profile is broken
+msgid "One or more of the primaries are invalid"
+msgstr "Vähemalt üks primaarvärvidest on sobimatu"
+
+#. TRANSLATORS: the profile is broken
+msgid "The primaries do not add to white"
+msgstr "Primaarvärvid ei moodusta kokku valget"
+
+#. TRANSLATORS: the profile is broken
+msgid "One or more of the primaries is unlikely"
+msgstr "Vähemalt üks primaarvärvidest on vähetõenäoline"
+
+#. TRANSLATORS: the profile is broken
+msgid "The white is not D50 white"
+msgstr "Valge pole D50 valge"
+
+#. TRANSLATORS: the profile is broken
+msgid "Unknown warning type"
+msgstr "Tundmatut liiki hoiatus"
+
 #. TRANSLATORS: if the device has a VCGT profile
 msgid "Yes"
 msgstr "Jah"
@@ -1336,6 +1388,11 @@ msgstr "Jah"
 #. TRANSLATORS: if the device has a VCGT profile
 msgid "No"
 msgstr "Ei"
+
+#. TRANSLATORS: profiles that have warnings are useable,
+#. * but may not be any good
+msgid "The profile has the following problems:"
+msgstr "Profiilil on järgnevad vead:"
 
 #. TRANSLATORS: this is the tooltip when the profile can be deleted
 msgid "Delete this profile"
