--- a/po/as.po
+++ b/po/as.po
@@ -8,10 +8,10 @@ msgstr ""
 "Project-Id-Version: gnome-color-manager master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N\n"
-"POT-Creation-Date: 2012-11-20 09:00+0000\n"
-"PO-Revision-Date: 2012-11-23 13:41+0530\n"
+"POT-Creation-Date: 2012-12-17 11:08+0000\n"
+"PO-Revision-Date: 2012-12-18 16:52+0530\n"
 "Last-Translator: Nilamdyuti Goswami <ngoswami@redhat.com>\n"
-"Language-Team: as_IN <kde-i18n-doc@kde.org>\n"
+"Language-Team: Assamese <kde-i18n-doc@kde.org>\n"
 "Language: as\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -514,8 +514,9 @@ msgid "Sending the targets to the printer."
 msgstr "লক্ষ্যবোৰক প্ৰিন্টাৰলে পঠোৱা হৈছে।"
 
 #: ../src/gcm-calibrate-argyll.c:2540
-msgid "Printing the targets..."
-msgstr "লক্ষ্যবোৰ প্ৰিন্ট কৰা হৈছে..."
+#| msgid "Printing the targets..."
+msgid "Printing the targets…"
+msgstr "লক্ষ্যবোৰ প্ৰিন্ট কৰা হৈছে…"
 
 #: ../src/gcm-calibrate-argyll.c:2546
 msgid "The printing has finished."
@@ -1681,7 +1682,6 @@ msgstr "পৰ্দা উজ্জ্বলতা"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:917
-#| msgid "Profile description: %s"
 msgid "No description has been set"
 msgstr "কোনো বিৱৰণ সংহতি কৰা হোৱা নাই"
 
@@ -1732,7 +1732,6 @@ msgstr "বগাটো D50 বগা নহয়"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:957
-#| msgid "Unknown manufacturer"
 msgid "Unknown warning type"
 msgstr "অজ্ঞাত সতৰ্কবাৰ্তা ধৰণ"
 
