--- a/po/et.po
+++ b/po/et.po
@@ -13,8 +13,8 @@ msgstr ""
 "Project-Id-Version: Gnome-color-manager\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N\n"
-"POT-Creation-Date: 2012-11-30 07:39+0000\n"
-"PO-Revision-Date: 2012-12-07 21:00+0300\n"
+"POT-Creation-Date: 2012-12-18 11:22+0000\n"
+"PO-Revision-Date: 2012-12-18 18:37+0300\n"
 "Last-Translator: Mattias Põldaru <mahfiaz@gmail.com>\n"
 "Language-Team: Gnome Estonian Translation Team <gnome-et@linux.ee>\n"
 "Language: \n"
@@ -407,8 +407,8 @@ msgstr "Andmete ettevalmistamine printimiseks."
 msgid "Sending the targets to the printer."
 msgstr "Näidisalade saatmine printerile."
 
-msgid "Printing the targets..."
-msgstr "Näidisalade printimine..."
+msgid "Printing the targets…"
+msgstr "Näidisalade printimine…"
 
 msgid "The printing has finished."
 msgstr "Printimine lõpetati."
