Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: gnome-color-manager.master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gnome-"
 "color-manager&keywords=I18N+L10N\n"
-"POT-Creation-Date: 2012-12-17 11:08+0000\n"
-"PO-Revision-Date: 2012-12-21 12:24+0100\n"
+"POT-Creation-Date: 2012-12-21 11:26+0000\n"
+"PO-Revision-Date: 2012-12-26 11:51+0100\n"
 "Last-Translator: Daniel Mustieles <daniel.mustieles@gmail.com>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "Language: \n"
@@ -522,7 +522,6 @@ msgid "Sending the targets to the printer."
 msgstr "Enviando los objetivos a la impresora."
 
 #: ../src/gcm-calibrate-argyll.c:2540
-#| msgid "Printing the targets..."
 msgid "Printing the targets…"
 msgstr "Imprimiendo los objetivos…"
 
@@ -1690,13 +1689,11 @@ msgstr "Tipo de conexión"
 
 #. TRANSLATORS: e.g. Screen brightness in percent
 #: ../src/gcm-viewer.c:806
-#| msgid "Brightness:"
 msgid "Screen brightness"
 msgstr "Brillo de la pantalla"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:917
-#| msgid "Profile description: %s"
 msgid "No description has been set"
 msgstr "No se ha establecido una descripción"
 
@@ -1708,37 +1705,37 @@ msgstr "No se ha establecido el copyright"
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:925
 msgid "The display compensation table is invalid"
-msgstr ""
+msgstr "La tabla de compensación de la pantalla no es válida"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:929
 msgid "A scum dot is present for media white"
-msgstr ""
+msgstr "Hay un punto basura en el blanco del medio"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:933
 msgid "The gray axis contains significant amounts of color"
-msgstr ""
+msgstr "El eje gris contiene cantidades significativas de color"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:937
 msgid "The gray axis is non-monotonic"
-msgstr ""
+msgstr "El eje gris no es monotónico"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:941
 msgid "One or more of the primaries are invalid"
-msgstr ""
+msgstr "Hay uno o más primarios no válidos"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:945
 msgid "The primaries do not add to white"
-msgstr ""
+msgstr "Los primarios no suman blanco"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:949
 msgid "One or more of the primaries is unlikely"
-msgstr ""
+msgstr "Uno o más de los primarios son poco probables"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:953
@@ -1747,7 +1744,6 @@ msgstr "El blanco no es blanco D50"
 
 #. TRANSLATORS: the profile is broken
 #: ../src/gcm-viewer.c:957
-#| msgid "Unknown manufacturer"
 msgid "Unknown warning type"
 msgstr "Tipo de advertencia desconocida"
 
@@ -1765,7 +1761,7 @@ msgstr "No"
 #. * but may not be any good
 #: ../src/gcm-viewer.c:1156
 msgid "The profile has the following problems:"
-msgstr ""
+msgstr "El perfil tiene los siguientes problemas:"
 
 #. TRANSLATORS: this is the tooltip when the profile can be deleted
 #: ../src/gcm-viewer.c:1273
