--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,37 @@
+Version 3.6.1
+~~~~~~~~~~~~~
+Released: 2013-01-10
+
+* Translations
+ - Added Bengali India translation (Sayak Sarkar)
+ - Added Slovak translation (Roman Mátyus)
+ - Updated Bulgarian translation (Alexander Shopov)
+ - Updated Bulgarian translation (Ivaylo Valkov)
+ - Updated Catalan translation (Gil Forcada)
+ - Updated Catalan (Valencian) translation (Carles Ferrando)
+ - Updated gujarati file (Sweta Kothari)
+ - Updated kn translation (Shankar Prasad)
+ - Updated Latvian translation (Rūdolfs Mazurs)
+ - Updated Norwegian bokmål translation (Kjartan Maraas)
+ - Updated Odia translation (ManojKumar Giri)
+ - Updated Slovak translation (Pavol Klačanský)
+ - Updated Telugu translations (Krishnababu Krothapalli)
+ - Updated Uyghur translation (Gheyret Kenji)
+
+* Bugfix:
+ - Better initial orientation for the Lab hull (Pascal de Bruijn)
+ - Calculate the profile whitepoint using the profile transform (Richard Hughes)
+ - Default to normal calibration (Pascal de Bruijn)
+ - Detect Ubuntu casper based livecd's as well (Pascal de Bruijn)
+ - For dispread skip instrument recalibration for the ColorMunki (Pascal de Bruijn)
+ - For the ColorMunki use high resolution measurement mode (Pascal de Bruijn)
+ - Get the ICC profile pre-cooked MD5 value if it is available (Richard Hughes)
+ - Honour precision for dispcal (Pascal de Bruijn)
+ - Large default window size, to prevent mid operation automatic resizing (Pascal de Bruijn)
+ - Move gcm-calibrate to lower right of the screen (Pascal de Bruijn)
+ - Show temperature page for more devices (Pascal de Bruijn)
+ - Use a 0.8 instead of 1.2 sized test window for Argyll (Pascal de Bruijn)
+
 Version 3.6.0
 ~~~~~~~~~~~~~
 Released: 2012-09-25
