--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,47 @@
+Version 3.7.92
+~~~~~~~~~~~~~~
+Released: 2013-03-18
+
+* Translations
+ - Added Czech translation (Marek Černocký)
+ - Added Turkish translation (Volkan Yalçın)
+ - Updated Assamese translation (Nilamdyuti Goswami)
+ - Updated Brazilian Portuguese translation (Enrico Nicoletto, Rafael Ferreira)
+ - Updated Catalan translation (Gil Forcada)
+ - Updated Catalan (Valencian) translation (Carles Ferrando)
+ - Updated Czech translation (Milan Knížek)
+ - Updated Danish translation (Ask H. Larsen)
+ - Updated Estonian translation (Mattias Põldaru)
+ - Updated Galician translation (Fran Diéguez)
+ - Updated German translation (Mario Blättermann)
+ - Updated Greek translation (Dimitris Spingos)
+ - Updated Gujarati translation (Sweta Kothari)
+ - Updated Italian translation (Milo Casagrande)
+ - Updated Korean translation (Shankar Prasad, Changwoo Ryu)
+ - Updated Latvian translation (Rūdolfs Mazurs)
+ - Updated Lithuanian translation (Aurimas Černius)
+ - Updated Malayalam translation (Anish A)
+ - Updated Norwegian bokmål translation (Kjartan Maraas)
+ - Updated Polish translation (Piotr Drąg)
+ - Updated Portuguese translation (António Lima)
+ - Updated Punjabi translation (A S Alam)
+ - Updated Serbian translation (Мирослав Николић)
+ - Updated Slovenian translation (Matej Urbančič)
+ - Updated Spanish translation (Daniel Mustieles)
+ - Updated Uyghur translation (Gheyret Kenji)
+ - Updated Simplified Chinese translation (Michael Lin)
+
+* New Features:
+ - Add some translations for the GAMUT metadata tags (Richard Hughes)
+ - Inhibit the screensaver and user switching when calibrating (Richard Hughes)
+
+* Bugfix:
+ - Do not use gtk_image_set_from_file() as we want to see the error if it fails (Richard Hughes)
+ - Ignore the OPENICC_automatic_generated metadata key (Richard Hughes)
+ - Set the transient and modal values before showing the window (Richard Hughes)
+ - Show the entire filename with path in gcm-viewer (Richard Hughes)
+ - Switch the profile viewer to be a dialog window (Richard Hughes)
+
 Version 3.7.5
 ~~~~~~~~~~~~~
 Released: 2012-02-05
