--- a/po/cs.po
+++ b/po/cs.po
@@ -643,7 +643,7 @@ msgstr "Vytvořit okno jako modální vůči XID"
 #. TRANSLATORS: just dumps the EDID to disk
 #: ../src/gcm-calibrate-helper.c:103
 msgid "gcm-dispread"
-msgstr ""
+msgstr "gcm-dispread"
 
 #. success
 #: ../src/gcm-calibrate-helper.c:169 ../src/gcm-calibrate-helper.c:199
