--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,22 @@
+Version 3.8.0
+~~~~~~~~~~~~~
+Released: 2013-03-26
+
+* Translations
+ - Added Tadjik translation (Victor Ibragimov)
+ - Updated Basque language (Inaki Larranaga Murgoitio)
+ - Updated Finnish translation (Jiri Grönroos)
+ - Updated French translation (Alexandre Franke)
+ - Updated Hindi translation (Rajesh Ranjan)
+ - Updated Hungarian translation (Gabor Kelemen)
+ - Updated Indonesian translation (Andika Triwidada)
+ - Updated Malayalam Translation (Ani Peter)
+ - Updated Marathi Translations (Sandeep Sheshrao Shedmake)
+ - Updated Odia Language (ManojKumar Giri)
+ - Updated Persian Translation (Arash Mousavi)
+ - Updated Tamil translation (Dr.T.Vasudevan)
+ - Updated Telugu Translations (Krishnababu Krothapalli)
+
 Version 3.7.92
 ~~~~~~~~~~~~~~
 Released: 2013-03-18
