--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+Version 3.8.1
+~~~~~~~~~~~~~
+Released: 2013-04-15
+
+* Translations
+ - Updated British English translation (Bruce Cowan)
+ - Updated Norwegian bokmål translation (Kjartan Maraas)
+ - Updated uk translation (Daniel Korostil)
+ - Updated Uyghur translation (Gheyret Kenji)
+
+* Bugfix:
+ - Make wrapping sensible when showing details about profiles (Richard Hughes)
+
 Version 3.8.0
 ~~~~~~~~~~~~~
 Released: 2013-03-26
