--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+Version 3.8.2
+~~~~~~~~~~~~~
+Released: 2013-05-13
+
+* Translations
+ - Updated Norwegian bokmål translation (Kjartan Maraas)
+ - Updated Russian translation (Yuri Myasoedov)
+
+* Bugfix:
+ - gcm_calibrate_is_livecd() should be linux-only (Antoine Jacoutot)
+ - Use g_ascii_dtostr() to avoid writing locale-specific floats (Richard Hughes)
+
 Version 3.8.1
 ~~~~~~~~~~~~~
 Released: 2013-04-15
