--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+Version 3.8.3
+~~~~~~~~~~~~~
+Released: 2013-09-13
+
+* Translations
+ - Updated Traditional Chinese translation (Cheng-Chia Tseng)
+
+* Bugfix:
+ - Clutter 1.12 is needed to properly build with mash (Pascal de Bruijn)
+ - Disable GCM_DATA path prefixing for colord provided image paths (Pascal de Bruijn)
+ - Kelvin is not a graded scale (Richard Hughes)
+
 Version 3.8.2
 ~~~~~~~~~~~~~
 Released: 2013-05-13
